--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="1200">
-                <img src="./assets/img/jonathan-pielmayer-j1gr2w10EtQ-unsplash.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/jonathan-pielmayer-j1gr2w10EtQ-unsplash.jpg" class="d-block w-100" alt="imagen1">
               </div>
               <div class="carousel-item" data-bs-interval="1200">
-                <img src="./assets/img/arturrro-h2CPeqTzaaY-unsplash.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/arturrro-h2CPeqTzaaY-unsplash.jpg" class="d-block w-100" alt="imagen2">
               </div>
               <div class="carousel-item" data-bs-interval="1200">
-                <img src="./assets/img/kate-remmer-RZn4_FzNUCY-unsplash.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/kate-remmer-RZn4_FzNUCY-unsplash.jpg" class="d-block w-100" alt="imagen3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
